--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -7,10 +7,6 @@ body
     height: 100vh
     position: relative
 
-.wrap
-    position: relative
-    height: 100vh
-
 a, i
     cursor: pointer
 
@@ -18,7 +14,7 @@ nav
     margin: 0 auto
     max-width: 1260px
     position: relative
-    z-index: 2
+    z-index: 3
 
     .logo
         float: left
@@ -65,6 +61,7 @@ nav
     top: 48%
     transform: translateY(-50%)
     //
+    z-index: 1
 
     #hero
         margin: 0 30px
@@ -87,32 +84,59 @@ nav
             color: $darks
 
 
+.overlay
+    background-color: transparentize($darks, 0.05)
+    display: none
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 2
+
+    // &.is-active
+    //     background-color: transparentize($darks, 0.05)
+
+
+
+
+        // animation:
+        //     name: overlayAnim
+        //     duration: 0.3s
+        //     timing-function: ease-in-out
+        //     fill-mode: forwards
+
+
+
+
+
+
 
 
 
 // About Page
 
-.about-container
-    width: 100%
-    text-align: center
-    // Center Vertically – this requires the parent element to be set to position relative.
-    position: absolute
-    top: 48%
-    transform: translateY(-50%)
-    //
-
-    #american-innovation
-        margin: 0 auto
-        padding: 0 30px 20px 30px
-        max-width: 480px
-
-    p
-        color: white
-        font-weight: 400
-        font-size: 1.2rem
-        max-width: 560px
-        margin: 0 auto
-        padding: 0 30px
+// .about-container
+//     width: 100%
+//     text-align: center
+//     // Center Vertically – this requires the parent element to be set to position relative.
+//     position: absolute
+//     top: 48%
+//     transform: translateY(-50%)
+//     //
+//
+//     #american-innovation
+//         margin: 0 auto
+//         padding: 0 30px 20px 30px
+//         max-width: 480px
+//
+//     p
+//         color: white
+//         font-weight: 400
+//         font-size: 1.2rem
+//         max-width: 560px
+//         margin: 0 auto
+//         padding: 0 30px
 
 
 
@@ -124,19 +148,26 @@ nav
 ///////////////
 
 // Animation fadeIn is linked to other elements.
-@-webkit-keyframes fadeIn
-    from
-        opacity: 0
+// @-webkit-keyframes fadeIn
+//     from
+//         opacity: 0
+//
+//     to
+//         opacity: 1
+//
+// @-webkit-keyframes fadeOut
+//     from
+//         opacity: 1
+//
+//     to
+//         opacity: 0
 
-    to
-        opacity: 1
+@keyframes overlayAnim
+    0%
+        background-color: rgba(0,0,0,0)
+    100%
+        background-color: transparentize($darks, 0.05)
 
-@-webkit-keyframes fadeOut
-    from
-        opacity: 1
-
-    to
-        opacity: 0
 
 
 
@@ -172,13 +203,13 @@ nav
             display: block
             margin-top: 30px
 
-    .dimmer
-        background-color: transparentize($darks, 0.05)
-        display: none
-        width: 100%
-        height: 100%
-        position: fixed
-        z-index: 1
+    // .dimmer
+    //     background-color: transparentize($darks, 0.05)
+    //     display: none
+    //     width: 100%
+    //     height: 100%
+    //     position: fixed
+    //     z-index: 1
 
     .hero-container
 
