--- a/styles/styles.css
+++ b/styles/styles.css
@@ -557,8 +557,6 @@ a {
   text-decoration: none;
   transition: color 200ms ease-in-out;
   -webkit-font-smoothing: antialiased; }
-  a:active, a:focus, a:hover {
-    color: #bfbfbf; }
 
 hr {
   border-bottom: 1px solid #fff;
@@ -576,10 +574,6 @@ body {
   height: 100vh;
   position: relative; }
 
-.wrap {
-  position: relative;
-  height: 100vh; }
-
 a, i {
   cursor: pointer; }
 
@@ -587,7 +581,7 @@ nav {
   margin: 0 auto;
   max-width: 1260px;
   position: relative;
-  z-index: 2; }
+  z-index: 3; }
   nav .logo {
     float: left;
     margin: 30px;
@@ -621,7 +615,8 @@ nav {
   text-align: center;
   position: absolute;
   top: 48%;
-  transform: translateY(-50%); }
+  transform: translateY(-50%);
+  z-index: 1; }
   .hero-container #hero {
     margin: 0 30px;
     max-width: 600px; }
@@ -640,34 +635,21 @@ nav {
       background-color: white;
       color: #171d1e; }
 
-.about-container {
-  width: 100%;
-  text-align: center;
+.overlay {
+  background-color: rgba(23, 29, 30, 0.95);
+  display: none;
   position: absolute;
-  top: 48%;
-  transform: translateY(-50%); }
-  .about-container #american-innovation {
-    margin: 0 auto;
-    padding: 0 30px 20px 30px;
-    max-width: 480px; }
-  .about-container p {
-    color: white;
-    font-weight: 400;
-    font-size: 1.2rem;
-    max-width: 560px;
-    margin: 0 auto;
-    padding: 0 30px; }
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2; }
 
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1; }
-  to {
-    opacity: 0; } }
+@keyframes overlayAnim {
+  0% {
+    background-color: transparent; }
+  100% {
+    background-color: rgba(23, 29, 30, 0.95); } }
 @media (max-width: 736px) {
   nav .logo {
     float: left;
@@ -688,14 +670,6 @@ nav {
   nav .menu > li {
     display: block;
     margin-top: 30px; }
-
-  .dimmer {
-    background-color: rgba(23, 29, 30, 0.95);
-    display: none;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 1; }
 
   .hero-container .button {
     margin-top: 20px;
