--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -27,9 +27,10 @@ nav
 
     .menu
         float: right
-        margin: 38px 30px 0 0
+        margin: 22px 30px 0 0
 
         a
+            display: inline-block
             padding: 16px
             transition: 0.3s
 
@@ -44,10 +45,7 @@ nav
     .drop-menu
         display: none
         position: absolute
-        z-index: -1
-
-        li
-            margin-top: 32px
+        z-index: 1
 
         a
             color: shade($white, 50%)
@@ -162,12 +160,6 @@ nav
 //     to
 //         opacity: 0
 
-@keyframes overlayAnim
-    0%
-        background-color: rgba(0,0,0,0)
-    100%
-        background-color: transparentize($darks, 0.05)
-
 
 
 
@@ -194,22 +186,20 @@ nav
 
         .menu
             display: none
-            margin-top: 80px
+            margin-top: 76px
             position: fixed
             text-align: center
             width: 100%
 
+            a
+                width: 100%
+
         .menu > li
             display: block
-            margin-top: 30px
 
-    // .dimmer
-    //     background-color: transparentize($darks, 0.05)
-    //     display: none
-    //     width: 100%
-    //     height: 100%
-    //     position: fixed
-    //     z-index: 1
+        .drop-menu
+            position: relative
+            z-index: 3
 
     .hero-container
 
