--- a/styles/styles.css
+++ b/styles/styles.css
@@ -591,8 +591,9 @@ nav {
     display: none; }
   nav .menu {
     float: right;
-    margin: 38px 30px 0 0; }
+    margin: 22px 30px 0 0; }
     nav .menu a {
+      display: inline-block;
       padding: 16px;
       transition: 0.3s; }
       nav .menu a:hover {
@@ -604,9 +605,7 @@ nav {
   nav .drop-menu {
     display: none;
     position: absolute;
-    z-index: -1; }
-    nav .drop-menu li {
-      margin-top: 32px; }
+    z-index: 1; }
     nav .drop-menu a {
       color: gray; }
 
@@ -645,11 +644,6 @@ nav {
   bottom: 0;
   z-index: 2; }
 
-@keyframes overlayAnim {
-  0% {
-    background-color: transparent; }
-  100% {
-    background-color: rgba(23, 29, 30, 0.95); } }
 @media (max-width: 736px) {
   nav .logo {
     float: left;
@@ -663,13 +657,17 @@ nav {
     z-index: 3; }
   nav .menu {
     display: none;
-    margin-top: 80px;
+    margin-top: 76px;
     position: fixed;
     text-align: center;
     width: 100%; }
+    nav .menu a {
+      width: 100%; }
   nav .menu > li {
-    display: block;
-    margin-top: 30px; }
+    display: block; }
+  nav .drop-menu {
+    position: relative;
+    z-index: 3; }
 
   .hero-container .button {
     margin-top: 20px;
