--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -51,6 +51,8 @@ nav
             color: shade($white, 50%)
 
 
+
+
 .hero-container
     width: 100%
     text-align: center
@@ -82,6 +84,8 @@ nav
             color: $darks
 
 
+
+
 .overlay
     background-color: transparentize($darks, 0.05)
     display: none
@@ -92,49 +96,36 @@ nav
     bottom: 0
     z-index: 2
 
-    // &.is-active
-    //     background-color: transparentize($darks, 0.05)
 
 
 
+///////////////////
+// About Section //
+///////////////////
 
-        // animation:
-        //     name: overlayAnim
-        //     duration: 0.3s
-        //     timing-function: ease-in-out
-        //     fill-mode: forwards
+.about-container
+    display: none
+    width: 100%
+    text-align: center
+    // Center Vertically – this requires the parent element to be set to position relative.
+    position: absolute
+    top: 48%
+    transform: translateY(-50%)
+    //
+    z-index: 3
 
+    #american-innovation
+        margin: 0 auto
+        padding: 0 30px 20px 30px
+        max-width: 480px
 
-
-
-
-
-
-
-
-// About Page
-
-// .about-container
-//     width: 100%
-//     text-align: center
-//     // Center Vertically – this requires the parent element to be set to position relative.
-//     position: absolute
-//     top: 48%
-//     transform: translateY(-50%)
-//     //
-//
-//     #american-innovation
-//         margin: 0 auto
-//         padding: 0 30px 20px 30px
-//         max-width: 480px
-//
-//     p
-//         color: white
-//         font-weight: 400
-//         font-size: 1.2rem
-//         max-width: 560px
-//         margin: 0 auto
-//         padding: 0 30px
+    p
+        color: white
+        font-weight: 400
+        font-size: 1.2rem
+        max-width: 560px
+        margin: 0 auto
+        padding: 0 30px
 
 
 
@@ -218,7 +209,7 @@ nav
             padding-bottom: 10px
 
         p
-            font-size: 1rem
+            font-size: .8rem
             max-width: 560px
             margin: 0 auto
             padding: 0 30px
