jQuery menu interactions - wip

--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -42,7 +42,7 @@ nav
         display: inline-block
         text-transform: uppercase
 
-    .drop-menu
+    .dropMenu
         display: none
         position: absolute
         z-index: 1
@@ -188,7 +188,7 @@ nav
         .menu > li
             display: block
 
-        .drop-menu
+        .dropMenu
             position: relative
             z-index: 3
 
