--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -128,32 +128,7 @@ nav
         font-size: 1.2rem
         max-width: 560px
         margin: 0 auto
-        padding: 0 30px
-
-
-
-
-
-
-///////////////
-// Animation //
-///////////////
-
-// Animation fadeIn is linked to other elements.
-// @-webkit-keyframes fadeIn
-//     from
-//         opacity: 0
-//
-//     to
-//         opacity: 1
-//
-// @-webkit-keyframes fadeOut
-//     from
-//         opacity: 1
-//
-//     to
-//         opacity: 0
-
+        padding: 0 30px 14px 30px
 
 
 
@@ -199,7 +174,12 @@ nav
             width: 100%
             z-index: 3
 
+
     .hero-container
+        top: 56%
+
+        #hero
+            max-width: 400px
 
         .button
             margin-top: 20px
@@ -207,16 +187,17 @@ nav
             width: 110px
 
 
-
-//About Page Queries
-
     .about-container
+        top: 56%
 
         #american-innovation
             padding-bottom: 10px
 
         p
-            font-size: .8rem
+            // font-size: 1rem
             max-width: 560px
             margin: 0 auto
             padding: 0 30px
+
+            &:nth-child(2)
+                display: none
