--- a/styles/styles.css
+++ b/styles/styles.css
@@ -665,7 +665,7 @@ nav {
     font-size: 1.2rem;
     max-width: 560px;
     margin: 0 auto;
-    padding: 0 30px; }
+    padding: 0 30px 14px 30px; }
 
 @media (max-width: 736px) {
   nav .logo {
@@ -696,9 +696,24 @@ nav {
     width: 100%;
     z-index: 3; }
 
-  .hero-container .button {
-    margin-top: 20px;
-    padding: 10px 12px;
-    width: 110px; } }
+  .hero-container {
+    top: 56%; }
+    .hero-container #hero {
+      max-width: 400px; }
+    .hero-container .button {
+      margin-top: 20px;
+      padding: 10px 12px;
+      width: 110px; }
+
+  .about-container {
+    top: 56%; }
+    .about-container #american-innovation {
+      padding-bottom: 10px; }
+    .about-container p {
+      max-width: 560px;
+      margin: 0 auto;
+      padding: 0 30px; }
+      .about-container p:nth-child(2) {
+        display: none; } }
 
 /*# sourceMappingURL=styles.css.map */
