Final touches for mobile

--- a/styles/2-modules/landing-page.sass
+++ b/styles/2-modules/landing-page.sass
@@ -176,10 +176,9 @@ nav
 
 
     .hero-container
-        top: 56%
 
         #hero
-            max-width: 400px
+            max-width: 500px
 
         .button
             margin-top: 20px
@@ -188,7 +187,6 @@ nav
 
 
     .about-container
-        top: 56%
 
         #american-innovation
             padding-bottom: 10px
@@ -201,3 +199,14 @@ nav
 
             &:nth-child(2)
                 display: none
+
+@media (max-width: 568px)
+
+    .hero-container
+        top: 56%
+
+        #hero
+            max-width: 400px
+
+    .about-container
+        top: 56%
