--- a/styles/styles.css
+++ b/styles/styles.css
@@ -696,24 +696,28 @@ nav {
     width: 100%;
     z-index: 3; }
 
+  .hero-container #hero {
+    max-width: 500px; }
+  .hero-container .button {
+    margin-top: 20px;
+    padding: 10px 12px;
+    width: 110px; }
+
+  .about-container #american-innovation {
+    padding-bottom: 10px; }
+  .about-container p {
+    max-width: 560px;
+    margin: 0 auto;
+    padding: 0 30px; }
+    .about-container p:nth-child(2) {
+      display: none; } }
+@media (max-width: 568px) {
   .hero-container {
     top: 56%; }
     .hero-container #hero {
       max-width: 400px; }
-    .hero-container .button {
-      margin-top: 20px;
-      padding: 10px 12px;
-      width: 110px; }
 
   .about-container {
-    top: 56%; }
-    .about-container #american-innovation {
-      padding-bottom: 10px; }
-    .about-container p {
-      max-width: 560px;
-      margin: 0 auto;
-      padding: 0 30px; }
-      .about-container p:nth-child(2) {
-        display: none; } }
+    top: 56%; } }
 
 /*# sourceMappingURL=styles.css.map */
