--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,9 +371,7 @@ textarea {
   /* 2 */ }
 
 button, [type='button'], [type='reset'], [type='submit'] {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
   background-color: #fff;
   border: 0;
   border-radius: 3px;
@@ -387,12 +385,8 @@ button, [type='button'], [type='reset'], [type='submit'] {
   line-height: 1;
   padding: 0.75em 1.5em;
   text-decoration: none;
-  -webkit-transition: background-color 200ms ease-in-out;
   transition: background-color 200ms ease-in-out;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   vertical-align: middle;
   white-space: nowrap; }
   button:hover, button:focus, [type='button']:hover, [type='button']:focus, [type='reset']:hover, [type='reset']:focus, [type='submit']:hover, [type='submit']:focus {
@@ -436,7 +430,6 @@ select[multiple] {
   box-sizing: border-box;
   margin-bottom: 0.75em;
   padding: 0.5em;
-  -webkit-transition: border-color 200ms ease-in-out;
   transition: border-color 200ms ease-in-out;
   width: 100%; }
   [type='color']:hover, [type='date']:hover, [type='datetime']:hover, [type='datetime-local']:hover, [type='email']:hover, [type='month']:hover, [type='number']:hover, [type='password']:hover, [type='search']:hover, [type='tel']:hover, [type='text']:hover, [type='time']:hover, [type='url']:hover, [type='week']:hover, input:not([type]):hover, textarea:hover,
@@ -454,15 +447,6 @@ select[multiple] {
     [type='color']:disabled:hover, [type='date']:disabled:hover, [type='datetime']:disabled:hover, [type='datetime-local']:disabled:hover, [type='email']:disabled:hover, [type='month']:disabled:hover, [type='number']:disabled:hover, [type='password']:disabled:hover, [type='search']:disabled:hover, [type='tel']:disabled:hover, [type='text']:disabled:hover, [type='time']:disabled:hover, [type='url']:disabled:hover, [type='week']:disabled:hover, input:not([type]):disabled:hover, textarea:disabled:hover,
     select[multiple]:disabled:hover {
       border: 1px solid #fff; }
-  [type='color']::-webkit-input-placeholder, [type='date']::-webkit-input-placeholder, [type='datetime']::-webkit-input-placeholder, [type='datetime-local']::-webkit-input-placeholder, [type='email']::-webkit-input-placeholder, [type='month']::-webkit-input-placeholder, [type='number']::-webkit-input-placeholder, [type='password']::-webkit-input-placeholder, [type='search']::-webkit-input-placeholder, [type='tel']::-webkit-input-placeholder, [type='text']::-webkit-input-placeholder, [type='time']::-webkit-input-placeholder, [type='url']::-webkit-input-placeholder, [type='week']::-webkit-input-placeholder, input:not([type])::-webkit-input-placeholder, textarea::-webkit-input-placeholder,
-  select[multiple]::-webkit-input-placeholder {
-    color: #999; }
-  [type='color']::-moz-placeholder, [type='date']::-moz-placeholder, [type='datetime']::-moz-placeholder, [type='datetime-local']::-moz-placeholder, [type='email']::-moz-placeholder, [type='month']::-moz-placeholder, [type='number']::-moz-placeholder, [type='password']::-moz-placeholder, [type='search']::-moz-placeholder, [type='tel']::-moz-placeholder, [type='text']::-moz-placeholder, [type='time']::-moz-placeholder, [type='url']::-moz-placeholder, [type='week']::-moz-placeholder, input:not([type])::-moz-placeholder, textarea::-moz-placeholder,
-  select[multiple]::-moz-placeholder {
-    color: #999; }
-  [type='color']:-ms-input-placeholder, [type='date']:-ms-input-placeholder, [type='datetime']:-ms-input-placeholder, [type='datetime-local']:-ms-input-placeholder, [type='email']:-ms-input-placeholder, [type='month']:-ms-input-placeholder, [type='number']:-ms-input-placeholder, [type='password']:-ms-input-placeholder, [type='search']:-ms-input-placeholder, [type='tel']:-ms-input-placeholder, [type='text']:-ms-input-placeholder, [type='time']:-ms-input-placeholder, [type='url']:-ms-input-placeholder, [type='week']:-ms-input-placeholder, input:not([type]):-ms-input-placeholder, textarea:-ms-input-placeholder,
-  select[multiple]:-ms-input-placeholder {
-    color: #999; }
   [type='color']::placeholder, [type='date']::placeholder, [type='datetime']::placeholder, [type='datetime-local']::placeholder, [type='email']::placeholder, [type='month']::placeholder, [type='number']::placeholder, [type='password']::placeholder, [type='search']::placeholder, [type='tel']::placeholder, [type='text']::placeholder, [type='time']::placeholder, [type='url']::placeholder, [type='week']::placeholder, input:not([type])::placeholder, textarea::placeholder,
   select[multiple]::placeholder {
     color: #999; }
@@ -471,9 +455,7 @@ textarea {
   resize: vertical; }
 
 [type="search"] {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none; }
+  appearance: none; }
 
 [type="checkbox"],
 [type="radio"] {
@@ -573,7 +555,6 @@ p {
 a {
   color: #fff;
   text-decoration: none;
-  -webkit-transition: color 200ms ease-in-out;
   transition: color 200ms ease-in-out;
   -webkit-font-smoothing: antialiased; }
 
@@ -615,7 +596,6 @@ nav {
     nav .menu a {
       display: inline-block;
       padding: 16px;
-      -webkit-transition: 0.3s;
       transition: 0.3s; }
       nav .menu a:hover {
         background-color: rgba(255, 255, 255, 0.08); }
@@ -637,8 +617,7 @@ nav {
   text-align: center;
   position: absolute;
   top: 48%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   z-index: 1; }
   .hero-container #hero {
     margin: 0 30px;
@@ -652,7 +631,6 @@ nav {
     margin: 40px auto 0 auto;
     padding: 14px 16px;
     text-transform: uppercase;
-    -webkit-transition: 0.3s;
     transition: 0.3s;
     width: 130px; }
     .hero-container .button:hover {
@@ -675,8 +653,7 @@ nav {
   text-align: center;
   position: absolute;
   top: 48%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   z-index: 3; }
   .about-container #american-innovation {
     margin: 0 auto;
@@ -715,8 +692,7 @@ nav {
     position: absolute;
     left: 50%;
     top: 112px;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 100%;
     z-index: 3; }
 
@@ -733,7 +709,7 @@ nav {
     max-width: 560px;
     margin: 0 auto;
     padding: 0 30px; }
-    .about-container p:nth-child(2) {
+    .about-container p:nth-child(3) {
       display: none; } }
 @media (max-width: 667px) {
   .hero-container {
@@ -743,3 +719,5 @@ nav {
 
   .about-container {
     top: 56%; } }
+
+/*# sourceMappingURL=styles.css.map */
