--- a/styles/2-modules/main.sass
+++ b/styles/2-modules/main.sass
@@ -1,3 +1,12 @@
+
+a, i
+    cursor: pointer
+
+.italic
+    font-style: italic
+
+//------------------------------------//
+
 body
     background-color: $darks
     background-image: url(../img/bg.jpg)
@@ -6,9 +15,6 @@ body
     font-weight: 700
     height: 100vh
     position: relative
-
-a, i
-    cursor: pointer
 
 nav
     margin: 0 auto
@@ -53,8 +59,7 @@ nav
         a
             color: shade($white, 50%)
 
-
-
+//------------------------------------//
 
 .hero-container
     width: 100%
@@ -86,8 +91,7 @@ nav
             background-color: white
             color: $darks
 
-
-
+//------------------------------------//
 
 .overlay
     background-color: transparentize($darks, 0.05)
@@ -99,12 +103,7 @@ nav
     bottom: 0
     z-index: 2
 
-
-
-
-///////////////////
-// About Section //
-///////////////////
+//------------------------------------//
 
 .about-container
     display: none
@@ -129,8 +128,6 @@ nav
         max-width: 560px
         margin: 0 auto
         padding: 0 30px 14px 30px
-
-
 
 
 ///////////////////
@@ -174,6 +171,7 @@ nav
             width: 100%
             z-index: 3
 
+//------------------------------------//
 
     .hero-container
 
@@ -185,6 +183,7 @@ nav
             padding: 10px 12px
             width: 110px
 
+//------------------------------------//
 
     .about-container
 
@@ -199,6 +198,8 @@ nav
 
             &:nth-child(3)
                 display: none
+
+//------------------------------------//
 
 @media (max-width: 667px)
 
