--- a/styles/2-modules/main.sass
+++ b/styles/2-modules/main.sass
@@ -142,6 +142,7 @@ nav
             float: left
             margin: 18px 0 0 18px
             width: 200px
+            height: 40px
 
         .menu-icon
             display: block
