--- a/styles/styles.css
+++ b/styles/styles.css
@@ -674,7 +674,8 @@ nav {
   nav .logo {
     float: left;
     margin: 18px 0 0 18px;
-    width: 200px; }
+    width: 200px;
+    height: 40px; }
   nav .menu-icon {
     display: block;
     float: right;
@@ -697,23 +698,7 @@ nav {
     top: 112px;
     transform: translate(-50%, -50%);
     width: 100%;
-    z-index: 3; }
-
-  .hero-container #hero {
-    max-width: 500px; }
-  .hero-container .button {
-    margin-top: 20px;
-    padding: 10px 12px;
-    width: 110px; }
-
-  .about-container #american-innovation {
-    padding-bottom: 10px; }
-  .about-container p {
-    max-width: 560px;
-    margin: 0 auto;
-    padding: 0 30px; }
-    .about-container p:nth-child(3) {
-      display: none; } }
+    z-index: 3; } }
 @media (max-width: 667px) {
   .hero-container {
     top: 56%; }
