--- a/styles/2-modules/main.sass
+++ b/styles/2-modules/main.sass
@@ -141,8 +141,10 @@ nav
         .logo
             float: left
             margin: 18px 0 0 18px
-            width: 200px
-            height: 40px
+
+            img
+                width: 200px
+                height: 40px
 
         .menu-icon
             display: block
