--- a/styles/2-modules/main.sass
+++ b/styles/2-modules/main.sass
@@ -27,6 +27,11 @@ nav
         margin: 30px
         cursor: pointer
         width: 250px
+        height: 50px
+
+        img
+            width: 100%
+            height: auto
 
     .menu-icon
         color: white
@@ -145,8 +150,8 @@ nav
             height: 40px
 
             img
-                width: 200px
-                height: 40px
+                width: 100%
+                height: auto
 
         .menu-icon
             display: block
