--- a/styles/2-modules/main.sass
+++ b/styles/2-modules/main.sass
@@ -82,6 +82,10 @@ nav
         margin: 0 30px
         max-width: 600px
 
+        img
+            width: 100%
+            height: auto
+
     .button
         border: 2px solid white
         box-sizing: content-box
@@ -129,6 +133,10 @@ nav
         margin: 0 auto
         padding: 0 30px 20px 30px
         max-width: 480px
+
+        img
+            width: 100%
+            height: auto
 
     p
         color: white
@@ -207,7 +215,6 @@ nav
             padding-bottom: 10px
 
         p
-            // font-size: 1rem
             max-width: 560px
             margin: 0 auto
             padding: 0 30px
